--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
   "version": 2,
-  "name": "audn",
-  "builds": [
-     { "src": "server.js", "use": "@vercel/node" }
-  ],
+
+  "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
+
   "routes": [
-     { "src": "/(.*)", "dest": "/server.js" }
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
   ]
 }
