--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ DB_HOST=ep-holy-breeze-31505336.us-east-2.aws.neon.tech
 DB_PORT=5432
 DB_NAME=danidb23
 DATABASE_URL=postgresql://r4iko17:W5XucYDe6bFQ@ep-holy-breeze-31505336.us-east-2.aws.neon.tech:5432/danidb23?sslmode=require
+DB_SSL= sslmode=require
